log
ju., 24 de ago. de 2023 16:16:24: 
 tests:  0|6
total_score: 0/70
2791ebc
ju., 24 de ago. de 2023 16:24:49: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
c1fc4e6
ju., 24 de ago. de 2023 16:31:09: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:58:26: error: expected expression before 'void'
     Node* n = createNode(void *data);
                          ^~~~
Compilation failed
efec942
ju., 24 de ago. de 2023 16:35:30: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
640bc3d
ju., 24 de ago. de 2023 16:41:02: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/70
cc1530d
ju., 24 de ago. de 2023 16:48:45: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 25/70
6b7515c
ju., 24 de ago. de 2023 16:55:21: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  3|4
total_score: 25/70
c509ecd
ju., 24 de ago. de 2023 16:57:30: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 25/70
d42b775
ju., 24 de ago. de 2023 16:59:52: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 25/70
56bb5d7
ju., 24 de ago. de 2023 17:03:34: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8fc0d7e
ju., 24 de ago. de 2023 17:08:08: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|3
total_score: 35/70
888bc73
sá., 26 de ago. de 2023 19:28:23: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
16540c8
sá., 26 de ago. de 2023 19:32:05: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:70:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
cf48b2f
sá., 26 de ago. de 2023 19:39:20: 
 list.c | 20 +++++++-------------
 1 file changed, 7 insertions(+), 13 deletions(-)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:69:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
b3e96b4
sá., 26 de ago. de 2023 19:39:43: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
2a226cd
sá., 26 de ago. de 2023 19:41:09: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|2
total_score: 45/70
0898abb
sá., 26 de ago. de 2023 19:46:51: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
8684552
sá., 26 de ago. de 2023 19:49:12: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:98:1: error: expected ';' before '}' token
 }
 ^
Compilation failed
391a261
sá., 26 de ago. de 2023 19:49:54: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
cdede35
sá., 26 de ago. de 2023 19:54:04: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
f87e6b8
sá., 26 de ago. de 2023 19:55:03: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|1
total_score: 55/70
651bd90
sá., 26 de ago. de 2023 20:09:32: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:127:12: error: unused variable 'nextNode' [-Werror=unused-variable]
     Node  *nextNode = list -> current -> next;
            ^~~~~~~~
list.c:126:12: error: unused variable 'prevNode' [-Werror=unused-variable]
     Node  *prevNode = list -> current -> prev;
            ^~~~~~~~
list.c:125:11: error: unused variable 'data' [-Werror=unused-variable]
     void *data = list -> current -> data;
           ^~~~
list.c:128:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
20b8d14
sá., 26 de ago. de 2023 20:11:37: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:125:11: error: unused variable 'data' [-Werror=unused-variable]
     void *data = list -> current -> data;
           ^~~~
list.c:137:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
48e6c73
sá., 26 de ago. de 2023 20:14:42: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:125:11: error: unused variable 'data' [-Werror=unused-variable]
     void *data = list -> current -> data;
           ^~~~
list.c:146:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
6f9846e
sá., 26 de ago. de 2023 20:15:58: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:125:11: error: unused variable 'data' [-Werror=unused-variable]
     void *data = list -> current -> data;
           ^~~~
list.c:148:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
dfd6446
